WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275982
[Cocoa] Pasting a Genmoji into Mail does not create a HEIC attachment
https://bugs.webkit.org/show_bug.cgi?id=275982
Summary
[Cocoa] Pasting a Genmoji into Mail does not create a HEIC attachment
Aditya Keerthi
Reported
2024-06-27 21:53:30 PDT
rdar://129805233
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2024-06-27 22:18:32 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30259
EWS
Comment 2
2024-06-28 10:08:19 PDT
Committed
280459@main
(0ed894383eb4): <
https://commits.webkit.org/280459@main
> Reviewed commits have been landed. Closing PR #30259 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug